--- a/exercises/day1/Day_1_Exercise_1.ipynb
+++ b/exercises/day1/Day_1_Exercise_1.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 1, Exercise 1 - Understanding Data Types and Variables\n",
+    "# Day 1, Exercise 1 - understanding data types, variables and basic operations\n",
     "\n",
-    "- ### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
+    "### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
-    "- ### There are four parts to this exercise, with the answers written under each section: \n",
-    "    - #### 1. Numbers\n",
-    "    - #### 2. Strings\n",
-    "    - #### 3. Lists\n",
-    "    - #### 4. Sets"
+    "### There are four parts to this exercise, with the answers written under each section\n",
+    "1. Numbers\n",
+    "2. Strings\n",
+    "3. Lists\n",
+    "4. Sets"
    ]
   },
   {
@@ -27,48 +27,49 @@
    "metadata": {},
    "source": [
     "## 1. Numbers\n",
+    "```python\n",
+    "2 + 2\n",
     "\n",
-    "`2 + 2`\n",
+    "10 / 4\n",
     "\n",
-    "`10 / 4`\n",
+    "50 - 5*6    \n",
     "\n",
-    "`50 - 5*6`    \n",
+    "(50 - 5)*6\n",
     "\n",
-    "`(50 - 5)*6`\n",
+    "5 ** 2\n",
     "\n",
-    "`5 ** 2`       \n",
+    "7 % 2\n",
     "\n",
-    "`7 % 2`\n",
+    "7 // 2\n",
     "\n",
-    "`7 // 2`\n",
+    "3.14 + 2    \n",
+    "```\n",
     "\n",
-    "`3.14 + 2`\n",
+    "- Assign the integer 20 to the variable `width`\n",
     "\n",
-    "Assign the integer 20 to the variable `width`\n",
+    "- Assign the float 5 to the variable `height`\n",
     "\n",
-    "Assign the float 5 to the variable `height`\n",
+    "- Save `width * height` to the variable `area`\n",
     "\n",
-    "Save `width * height` to the variable `area`\n",
+    "- What is the area?\n",
     "\n",
-    "What is the area?\n",
+    " What happens if you assign 30 to `width` and print `area` again?  \n",
     "\n",
-    "What happens if you assign 30 to `width` and print `area` again?  \n",
+    " Re-assign `width * height` to `area` and see if the results changes now.  \n",
     "\n",
-    "Re-assign `width * height` to `area` and see if the results changes now.  \n",
+    "- Assign `area * 2` to `2timesArea`\n",
     "\n",
-    "Assign `area * 2` to `2timesArea`\n",
-    "\n",
-    "Assign `area + 2` to `return`\n",
+    "- Assign `area + 2` to `return`\n",
     "\n",
     "\n",
-    "<div style=\"height: 50px\"></div>"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The answer"
+    "### The answers"
    ]
   },
   {
@@ -286,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When assigning width * height to area, python stores the actual value assigned to area in memory, ie area = 100.0. It does not store the pointer to width * height. To update area with the new inputs we have to actively assign area a value again."
+    "When assigning `width * height` to area, python stores the actual value assigned to area in memory, ie `area = 100.0`. It does not store the pointer to `width * height`. To update area with the new inputs we have to actively assign area a value again."
    ]
   },
   {
@@ -359,55 +360,55 @@
    "source": [
     "## 2. Strings\n",
     "\n",
+    "```python\n",
+    "'Hello World!'\n",
+    "\"Hello World!\"\n",
     "\n",
-    "`'Hello World!'`  \n",
-    "`\"Hello World!\"`\n",
+    "'Oh, no, you didn\\\\'t...'\n",
+    "\"Oh, no, you didn't...\"\n",
     "\n",
-    "`'Oh, no, you didn\\\\'t...'`  \n",
-    "`\"Oh, no, you didn't...\"`\n",
-    "\n",
-    "`\"\\\\\"Yes\\\\\", I did!\"`  \n",
-    "`'\"Yes\", I did'`\n",
-    "\n",
-    "\n",
-    "`'Hello'     '  '   'World'     '!'`\n",
-    "\n",
-    "`s = 'Hello\\tWorld'`  \n",
-    "`s`         \n",
-    "`print(s)`  \n",
+    "\"\\\\\"Yes\\\\\", I did!\"\n",
+    "'\"Yes\", I did'\n",
     "\n",
     "\n",
-    "`s = 'First line.\\nSecond line.'`  \n",
-    "`s`  \n",
-    "`print(s)`  \n",
+    "'Hello'     '  '   'World'     '!'\n",
     "\n",
-    "`folder = 'C:\\some\\name'`  \n",
-    "`print(folder)`  \n",
+    "s = 'Hello\\tWorld'\n",
+    "s\n",
+    "print(s)\n",
     "\n",
-    "`folder = r'C:\\some\\name'`  \n",
-    "`print(folder)`  \n",
     "\n",
-    "`'hmm ' + 3 * 'miam'`  \n",
+    "s = 'First line.\\nSecond line.'\n",
+    "s\n",
+    "print(s)\n",
     "\n",
-    "`'Py' 'thon'`  \n",
+    "folder = 'C:\\some\\name'\n",
+    "print(folder)\n",
     "\n",
-    "`prefix = 'Py'`  \n",
-    "`prefix + 'thon'`  \n",
+    "folder = r'C:\\some\\name'\n",
+    "print(folder)\n",
     "\n",
-    "`text = ('Put several strings within parentheses ' +`  \n",
-    "&emsp;&emsp;&emsp;&emsp; `'to have them joined together, ' +`  \n",
-    "&emsp;&emsp;&emsp;&emsp; `'with the use of ' +`  \n",
-    "&emsp;&emsp;&emsp;&emsp; `'concatenation')`  \n",
-    "`text`\n",
+    "'hmm ' + 3 * 'miam'\n",
     "\n",
-    "<div style=\"height: 50px\"></div>"
+    "'Py' 'thon'\n",
+    "\n",
+    "prefix = 'Py'\n",
+    "prefix + 'thon'\n",
+    "\n",
+    "text = ('Put several strings within parentheses ' +\n",
+    "        'to have them joined together, ' +\n",
+    "        'with the use of ' +\n",
+    "        'concatenation')\n",
+    "text       \n",
+    "```\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The answer"
+    "### The answers"
    ]
   },
   {
@@ -784,7 +785,7 @@
     "squares * 2\n",
     "squares * cubes\n",
     "```\n",
-    "<div style=\"height: 50px\"></div>"
+    "___"
    ]
   },
   {
@@ -873,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Set\n",
+    "## 4. Set\n",
     "\n",
     "```python\n",
     "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"]\n",
@@ -889,21 +890,7 @@
     "union_set = set1.union(set2)\n",
     "print(union_set)\n",
     "```\n",
-    "<div style=\"height: 50px\"></div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"]\n",
-    "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"}\n",
-    "\n",
-    "\n",
-    "\n",
-    "unique_list = list(set(mylist))"
+    "___"
    ]
   },
   {
@@ -944,7 +931,7 @@
     "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"] # Lists may contain duplicate elements\n",
     "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"} # Sets automatically remove duplicate elements. \n",
     "unique_list = list(set(mylist)) # a convenient way to remove duplicate elements from a list \n",
-    "sorted_unique_list = sorted(unique_list)\n",
+    "sorted_unique_list = sorted(unique_list) # Strings are sorted in alphabetical order.\n",
     "print(\"mylist: \", mylist)\n",
     "print(\"myset: \", myset)\n",
     "print(\"unique_list: \", unique_list) \n",
@@ -981,7 +968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One can check membership of an element using the `in` operation for both Lists and Sets. However, Sets is usually faster for membership checking, especially when the data contains many elements."
+    "One can check membership of an element using the `in` operation for both Lists and Sets. However, Sets are usually faster for membership checking, especially when the data contains many elements."
    ]
   },
   {
@@ -1003,13 +990,6 @@
     "union_set = set1.union(set2)\n",
     "print(union_set) # The union method returns a new set with the union of two sets."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
