--- a/exercises/day1/Day_1_Exercise_2.ipynb
+++ b/exercises/day1/Day_1_Exercise_2.ipynb
@@ -4,26 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 1, Exercise 2 - Operations\n",
+    "# Day 1, Exercise 2 - built-in functions and operations\n",
     "\n",
-    "Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
+    "### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
-    "There are 4 parts to this exercise: Strings, Lists, Operators, and a small final exercise, with answers listed under each part."
+    "### There are 4 parts to this exercise, with answers listed under each part.\n",
+    "1. Strings \n",
+    "2. Lists\n",
+    "3. Operators \n",
+    "4. Bonus exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Strings \n",
-    "\n",
-    "`word = 'Supercalifragilisticexpialidocious'`  \n",
-    "`word[5]`  \n",
-    "`word[0]`   \n",
-    "`word[-1]`  \n",
-    "`word[2000]`  \n",
-    "`word[0] = 's'`\n",
-    "\n",
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Strings \n",
+    "```python\n",
+    "word = 'Supercalifragilisticexpialidocious'  \n",
+    "word[5]\n",
+    "word[0]   \n",
+    "word[-1]  \n",
+    "word[2000]  \n",
+    "word[0] = 's'\n",
+    "```\n",
     "1) How many characters are there in `word?`  \n",
     "\n",
     "2) What are the first 5 characters in `word?`  \n",
@@ -32,19 +43,22 @@
     "\n",
     "4) Reverse the order of characters in `word`  \n",
     "\n",
-    "<br><br>"
+    "5) Get the every second characters in `word`\n",
+    "\n",
+    "6) Convert the characters of `word` to uppercase\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strings - Answers"
+    "### The answers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +67,7 @@
        "'c'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python uses 0-based indexing for accessing elements in strings or lists. word[0] will access the first element of the string, while word[-1] will access the last element. Trying to access elements outside the range of the index will result in an IndexError. String are immutable, meaning we cannot assign new values to elements in the string, as demonstrated above"
+    "Python uses 0-based indexing for accessing elements in strings or lists. word[0] will access the first element of the string, while word[-1] will access the last element. Trying to access elements outside the range of the index will result in an `IndexError`. String are immutable, meaning we cannot assign new values to elements in the string, as demonstrated above"
    ]
   },
   {
@@ -163,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>How many characters are there in word?</b>\n",
+    "<b>How many characters are there in `word`?</b>\n",
     "\n",
     "\\- Use the len() function to get the length of a string or list"
    ]
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,13 +222,14 @@
        "'Super'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word[0:5]"
+    "word[0:5]\n",
+    "# word[:5] # works also in this way"
    ]
   },
   {
@@ -223,7 +238,7 @@
    "source": [
     "<b>What are the last 3 characters in word?</b>\n",
     "\n",
-    "\\- As slicing does not include the last element specified, we cannot write word[-3:-1]. Instead, we omit the element to the right of : to indicate that we want the rest of the list. The same principle applies to omitting the element to the left of the : thus including everything from the start until but not including the element specified to the right of :"
+    "- As slicing does not include the last element specified, we cannot write `word[-3:-1]`. Instead, we omit the element to the right of `:` to indicate that we want the rest of the list. The same principle applies to omitting the element to the left of the `:` thus including everything from the start until but not including the element specified to the right of `:`"
    ]
   },
   {
@@ -252,7 +267,7 @@
    "source": [
     "<b>Reverse the order of characters in word</b>\n",
     "\n",
-    "\\- Here we use the extended slicing with the form word[begin:end:step]. By omitting the begin and end part, and defining step as -1, we tell it to take the whole string, and go one step back at the time."
+    "- Here we use the extended slicing with the form `word[start:stop:step]`. By omitting the begin and end part, and defining step as `-1`, we tell it to take the whole string, and go one step back at the time."
    ]
   },
   {
@@ -276,52 +291,93 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ueclfaiitcxildcos'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "<br><br><br>"
+    "# remember [start, stop, step]\n",
+    "# when start is 1 and step is 2, it selects every second chars starting from the second char \n",
+    "word[1::2] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SUPERCALIFRAGILISTICEXPIALIDOCIOUS'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word.upper()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lists\n",
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Lists\n",
+    "```python\n",
+    "squares = [1, 4, 9, 16, 25]  \n",
     "\n",
-    "`squares = [1, 4, 9, 16, 25]`  \n",
+    "squares[0]   \n",
+    "squares[-1]  \n",
     "\n",
-    "`squares[0]`   \n",
-    "`squares[-1]`  \n",
+    "squares[1] = 16  \n",
+    "squares\n",
+    "```\n",
+    "- Append 36 to the list `squares`  \n",
+    "- Remove 36 from the list again  \n",
+    "- Reverse the order of items in the list\n",
     "\n",
-    "`squares[1] = 16`  \n",
-    "`squares`\n",
+    "---\n",
     "\n",
-    "Add 36 to the list `squares`  \n",
-    "You changed your mind, remove 36 from the list again  \n",
-    "Reverse the order of items in the list\n",
-    "\n",
-    "`justsaying = [\"Grammar, \", \"the difference between \", \"knowing you're shit and \",\"... \", \"knowing your shit\"]`  \n",
-    "`\"\".join(justsaying)`\n",
-    "\n",
-    "Make a list named `snplist` that contains rs2354, rs325678, rs32468, rs215456  \n",
+    "- Make a list named `snplist` that contains rs2354, rs325678, rs32468, rs215456  \n",
     "Find out how long this list is   \n",
     "\n",
-    "Make a list with 5 random numbers (you can mix integers and floats)  \n",
-    "What is the maximum and minimum value in the list?   \n",
-    "What happens if you summarize all the values in the list?  \n",
-    "Is the result an int or float? Why?\n",
-    "\n",
-    "`cubes = [1, 8, 27, 64]`  \n",
-    "print appropriately to output the text `'This list has the length 4 and maximum value 64'`\n",
-    "\n",
-    "<br><br>"
+    "- Make a list with 5 random numbers (you can mix integers and floats)  \n",
+    "    - What is the maximum and minimum value in the list?   \n",
+    "    - What happens if you summarize all the values in the list?  \n",
+    "- Is the result an int or float? Why?\n",
+    "---\n",
+    "```python\n",
+    "cubes = [1, 8, 27, 64]\n",
+    "```\n",
+    "- print appropriately to output the text `'This list has the length 4 and maximum value 64'`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lists - Answers\n",
+    "### The answers\n",
     "\n",
     "Lists are similar to strings and many operations can be performed similarly in both. They are both indexed in the same way, and can be manipulated in much the same ways. "
    ]
@@ -379,9 +435,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Add 36 to the list squares</b>\n",
+    "<b>Append 36 to the list squares</b>\n",
     "\n",
-    "\\- Use the append() method to add items to the end of a list. The append() method adds an item to the list in question, without having to re-assign the list to a new variable."
+    "- Use the `append()` method to add items to the end of a list. The `append()` method adds an item to the list in question, without having to re-assign the list to a new variable."
    ]
   },
   {
@@ -411,7 +467,7 @@
    "source": [
     "<b>Remove 36 from the list again</b>\n",
     "\n",
-    "\\- Easiest here is to use the pop() method, that removes the last item in a list. However, there are other options, both squares.remove(36) and del squares[5] will remove 36 from the list. squares.remove(36) will remove only the first instance of 36 in the list, while del square[5] will delete the item with index position 5."
+    "- Easiest here is to use the `pop()` method, that removes the last item in a list. However, there are other options, both `squares.remove(36)` and `del squares[5]` will remove 36 from the list. `squares.remove(36)` will remove only the first instance of 36 in the list, while `del square[5]` will delete the item at index position 5."
    ]
   },
   {
@@ -441,7 +497,7 @@
    "source": [
     "<b>Reverse the order of the list</b>\n",
     "\n",
-    "\\- Here we have two options in contrast to when reversing the order of a string. We can both use squares[::-1], and squares.reverse(), which is a method that only works on lists. NOTE! While using squares[::-1] only displays the list in reverse order, squares.reverse() reverses it in place."
+    "- Here we have two options in contrast to when reversing the order of a string. We can both use `squares[::-1]`, and `squares.reverse()`, which is a method that only works on lists. __NOTE!__: While using `squares[::-1]` only displays the list in reverse order, `squares.reverse()` reverses it in place."
    ]
   },
   {
@@ -466,34 +522,6 @@
     "print(squares)\n",
     "squares.reverse()\n",
     "print(squares)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Grammar, the difference between knowing you're shit and ... knowing your shit\""
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "justsaying = [\"Grammar, \", \"the difference between \", \"knowing you're shit and \",\"... \", \"knowing your shit\"]\n",
-    "\"\".join(justsaying)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Above we take all items in a list and join them together to a string using the join() method. The first string defines how to join the item, here the '' means no space in between when joining items."
    ]
   },
   {
@@ -590,46 +618,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><br><br>"
+    "<hr style=\"border: 2px solid #000080;\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operators\n",
+    "## 3. Operators\n",
+    "```python\n",
+    "5 > 3  \n",
+    "34 == 34.0  \n",
+    "4 + 5 >= 10 - 1 \n",
+    "9 != 9\n",
+    "3.14 + 1 == 4.14  \n",
     "\n",
-    "`5 > 3`  \n",
-    "`34 == 34.0`  \n",
-    "`4 + 5 >= 10 - 1`  \n",
-    "`9 != 9`  \n",
-    "`3.14 + 1 == 4.14`  \n",
+    "x = 3.14  \n",
+    "y = 2\n",
+    "z = [2, 4, 5, 7, 0]  \n",
     "\n",
-    "`x = 3.14`  \n",
-    "`y = 2`  \n",
-    "`z = [2,4,5,7,0]`  \n",
+    "'a' in z  \n",
+    "y in z  \n",
     "\n",
-    "`'a' in z`  \n",
-    "`y in z`  \n",
+    "'a' not in z  \n",
     "\n",
-    "`'a' not in z`  \n",
+    "2 in z and y == 2  \n",
+    "4 in z and 9 in z  \n",
+    "2 in z or w == 5 \n",
+    "8 in z and w == 5 \n",
     "\n",
-    "`2 in z and y == 2`  \n",
-    "`4 in z and 9 in z`  \n",
-    "`2 in z or w == 5`  \n",
-    "`8 in z and w == 5`  \n",
-    "\n",
-    "`2 in z and y == 2 or 1 in z`  \n",
-    "`2 in z or 4 in z and w == 2`  \n",
-    "\n",
-    "<br><br>"
+    "2 in z and y == 2 or 1 in z \n",
+    "2 in z or 4 in z and w == 2 \n",
+    "```\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operators - Answers"
+    "### The answers"
    ]
   },
   {
@@ -714,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -723,13 +751,14 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3.14 + 1 == 4.14       # Watch out for this one! Remember how python approximates floats? This is such occasion to be aware of"
+    "# Watch out for this one! Remember how python approximates floats? This is such occasion to be aware of\n",
+    "3.14 + 1 == 4.14      "
    ]
   },
   {
@@ -986,92 +1015,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And as the expression left of the OR operator evaluates to True, the entire expression must be true, and the right side is never evaluated.\n",
-    "\n",
-    "<br><br><br>"
+    "And as the expression left of the OR operator evaluates to True, the entire expression must be true, and the right side is never evaluated."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BONUS EXERCISE: A good Day\n",
-    "\n",
-    "1. Your task here is to decide if today is a good day. There are certain criteria that have to be fulfilled for a day to be classified as good:\n",
-    "\n",
-    "    - Days on a weekend are always good  \n",
-    "    - Weekdays are good if it's no earlier than 10  \n",
-    "    - If there's coffee in the kitchen, it makes a weekday good  \n",
-    "\n",
-    "&emsp;&emsp;Complete the below code using AND and OR statements to find out if today is a good day, and print the results:\n",
-    "\n",
-    "&emsp;&emsp;`day    = \"Monday\"`  \n",
-    "&emsp;&emsp;`time   = 7`  \n",
-    "&emsp;&emsp;`coffee = True`  \n",
-    "\n",
-    "&emsp;&emsp;`todayIsAGoodDay = ....`\n",
-    "\n",
-    "\n",
-    "\n",
-    "2. Modify your code so coffee only makes a weekday good if there is no rain\n",
-    "\n",
-    "<br><br>"
+    "<hr style=\"border: 2px solid #000080;\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A good Day - Answers\n",
+    "## 4. Bonus exercise: gene expression\n",
+    "\n",
+    "#### Scenario:\n",
+    "\n",
+    "You are a bioinformatics researcher comparing the expression levels of two genes under a specific condition. You have the expression levels of these genes and need to determine if they meet certain criteria using logical operators.\n",
+    "\n",
+    "##### Gene Expression Data:\n",
+    "```\n",
+    "gene1_expression = 50\n",
+    "gene2_expression = 90\n",
+    "```\n",
+    "\n",
+    "#### Task\n",
+    "\n",
+    "- Determine if both genes are highly expressed.\n",
+    "\n",
+    "    - A gene is considered highly expressed if its expression level is greater than 50.\n",
+    "    \n",
+    "- Determine if at least one of the genes is highly expressed.\n",
+    "\n",
+    "- Determine if gene1 is highly expressed but gene2 is not.\n",
+    "\n",
+    "- Determine if neither gene is highly expressed.\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The answers\n",
     "\n",
     "There are a few slightly different ways you can write the code for this. Here we present one solution, if you have written something else that's not wrong. Just make sure to test that your code actually does what you intend it to do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today is a good day: True\n"
+      "Both genes are highly expressed: False\n",
+      "At least one gene is highly expressed: True\n",
+      "Gene1 is highly expressed but gene2 is not: False\n",
+      "Neither gene is highly expressed: False\n"
      ]
     }
    ],
    "source": [
-    "day = \"Monday\"\n",
-    "time = 7\n",
-    "coffee = True\n",
+    "gene1_expression = 50\n",
+    "gene2_expression = 90\n",
     "\n",
-    "todayIsAGoodDay = day in [\"Saturday\", \"Sunday\"] or time >= 10 or coffee\n",
+    "# Highly expressed if expression level is greater than 50\n",
+    "is_gene1_high = gene1_expression > 50\n",
+    "is_gene2_high = gene2_expression > 50\n",
     "\n",
-    "print('Today is a good day: ' + str(todayIsAGoodDay))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today is a good day: False\n"
-     ]
-    }
-   ],
-   "source": [
-    "day = \"Monday\"\n",
-    "time = 7\n",
-    "coffee = True\n",
-    "rain = True\n",
+    "# Determine if both genes are highly expressed\n",
+    "both_highly_expressed = is_gene1_high and is_gene2_high\n",
+    "print(\"Both genes are highly expressed:\", both_highly_expressed)\n",
     "\n",
-    "todayIsAGoodDay = day in [\"Saturday\", \"Sunday\"] or time >= 10 or coffee and not rain\n",
+    "# Determine if at least one gene is highly expressed\n",
+    "either_highly_expressed = is_gene1_high or is_gene2_high\n",
+    "print(\"At least one gene is highly expressed:\", either_highly_expressed)\n",
     "\n",
-    "print('Today is a good day: ' + str(todayIsAGoodDay))"
+    "# Determine if gene1 is highly expressed but gene2 is not\n",
+    "gene1_high_gene2_not = is_gene1_high and not is_gene2_high\n",
+    "print(\"Gene1 is highly expressed but gene2 is not:\", gene1_high_gene2_not)\n",
+    "\n",
+    "# Determine if neither gene is highly expressed\n",
+    "neither_highly_expressed = not is_gene1_high and not is_gene2_high\n",
+    "print(\"Neither gene is highly expressed:\", neither_highly_expressed)"
    ]
   }
  ],
